[FF-back] Reorganize queries execution